# dop-graphics

./: .gitignore
1-particles/: CMakeLists.txt
1-particles/assets/: particles.json
1-particles/src/: back.main.cpp  main.cpp  pch.h
1-particles/src/data/: CMakeLists.txt  positions.h
1-particles/src/systems/: CMakeLists.txt  movement_system.cpp
2-particles/: CMakeLists.txt
2-particles/src/: main.cpp  pch.h
2-particles/src/camera/: camera.h  create_camera.cpp  poll_event.cpp
2-particles/src/database/: database.h  seed_database.cpp
2-particles/src/light/: create_light.cpp  light.h  move_light.cpp  render_light.cpp
2-particles/src/movement/: movement.cpp
2-particles/src/particles/: CMakeLists.txt  create_particles.cpp  move_particles.cpp  particles.h  render_particles.cpp
3-particles/: getCode.py
3-particles/src/: main.cpp
3-particles/src/camera/: camera.h  create_camera.cpp  poll_event.cpp
3-particles/src/data/: camera_data.h  light_data.h  particles_data.h
3-particles/src/database/: seed_database.cpp
3-particles/src/light/: light.h  move_light.cpp  render_light.cpp
3-particles/src/movement/: CMakeLists.txt  movement.h
3-particles/src/particles/: create_particles.cpp  move_particles.cpp  render_particles.cpp
4-particles/: README.md  code.txt
4-particles/src/: main.cpp
4-particles/src/camera/: CMakeLists.txt  create_camera.cpp  poll_event.cpp
4-particles/src/data/: camera_data.h  light_data.h
4-particles/src/database/: CMakeLists.txt  seed_database.cpp
4-particles/src/light/: CMakeLists.txt  create_light.cpp  move_light.cpp
4-particles/src/particles/: create_particles.cpp  move_particles.cpp  particles.h  render_particles.cpp
basic-game/: CMakeLists.txt  main.cpp
optimization-experiments/aosoa/: CMakeLists.txt  compile.sh  main.cpp
optimization-experiments/aosoa/back/: back.aosoa.cpp
optimization-experiments/vectorizacion/: CMakeLists.txt  main.cpp
